--- a/anowai.html
+++ b/anowai.html
@@ -34,7 +34,10 @@
         
         <h2>CAREER OBJECTIVE</h2>
 
-          <p>To strive for excellence and precision at all times, in all positions and circumstances, attaining professional distinctions and proficiency in organizations to <br>better achieve set targets both in the long run and short run.
+          <p>To strive for excellence and precision at all times, in all 
+positions and circumstances, attaining professional distinctions and 
+proficiency in organizations to <br>better achieve set targets both in 
+the long run and short run.
         </p>
 
         <hr size="5" noshade>
@@ -77,7 +80,7 @@
 
             <ul>
 
-              <li>Diploma in Peachtree Accounting</li>
+              <li>Diploma in Peachtree Accounting.</li>
 
             </ul>
 
