I added a fullstop after the B.sc(Hon.)

--- a/anowai.html
+++ b/anowai.html
@@ -57,7 +57,7 @@ the long run and short run.
 
           <ul>
 
-              <li>B.sc Accounting (Hons)</li>
+              <li>B.sc Accounting (Hons.)</li>
 
           </ul><br>
 
