File that should be merge

--- a/anowai.html
+++ b/anowai.html
@@ -36,6 +36,10 @@
 							<td>
 								<a href="https://www.twitter.com/MrAnowai"><img src="https://res.cloudinary.com/anowai-py/image/upload/v1566923225/twitter_image_dgh7qi.jpg" alt="twitter Handle" width="30" height="30"></a>
 							</td>
+              <br><br>
+              <td>
+                <a href="form.html"><img src="https://res.cloudinary.com/anowai-py/image/upload/v1567451564/gotoform_wkbqoh.png" alt="form Handle" width="60" height="30"></a>
+              </td>
 						</tr>
 					</table>
 				</center>
