Spelling correction for the thankyou page

--- a/thankyou.html
+++ b/thankyou.html
@@ -6,8 +6,8 @@
 </head>
 <body id="thanks">
 
-	<h1>Thank you filling the form</h1>
-	<h3>Your information is important.</h3>
+	<h1>Thank you for reaching out</h1>
+	<h3>Your feedback is important.</h3>
 
 </body>
 </html>
